# MyWhoosh2Garmin

./: .gitignore  MANIFEST.in  Makefile  README.md  myWhoosh2Garmin.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: codeql.yml  main.yml
