# Build system requirements.
[build-system]
requires = ["flit_core >=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "myWhoosh2Garmin"
version = "0.1.0"
description = "Upload fit files from mywhoosh.com to Garmin Connect."
authors = [
    { name = "Jay Queue" },
    { name = "Lowtower", email = "lowtower@lowtower.de" }
]
readme = "README.md"
license = { text = "LICENSE" }
# Assume Python version >= 3.11
requires-python = ">=3.11"
dependencies = [
    "fit_tool",
    "flit_core",
    "garth",
    "tzlocal",
]
[project.optional-dependencies]
test = [
    "codespell",
    "ruff",
    "isort",
    "mypy",
    "pycodestyle",
    "pyflakes",
    "pylint",
]
[project.scripts]
mywhoosh2garmin = "myWhoosh2Garmin:main"

[tool.flit.sdist]
include = ["README.md", "myWhoosh2Garmin.py"]
exclude = []

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".env",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs",
]
# Same as Black.
line-length = 120
indent-width = 4

# Always generate Python 3.11-compatible code.
target-version = "py311"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "C901",
    "D202",
    "D203",
    "D211",
    "D213",
    "D400",
    "D401",
    "D403",
    "D415",
    "PLR",  # magic-value-comparison
    "S101",  # assert
    "S603",  # subprocess-without-shell-equals-true
    "COM812",  # missing-trailing-comma
    # extra
    "TRY301",  # raise-within-try


]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_configs = true
warn_no_return = true
warn_unreachable = false
enable_error_code = ["ignore-without-code"]
disable_error_code = ["return"]

[[tool.mypy.overrides]]
module = ["fit_tool.*"]
ignore_missing_imports = true

[tool.pycodestyle]
count = false
statistics = true

[tool.pylint.config]
extension-pkg-whitelist = [
    "numpy", "pandas", "keras", "tensorflow", "sklearn",
    "matplotlib", "scipy"
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "invalid-name",
]
jobs = 1
confidence = "HIGH"

[tool.pylint.FORMAT]
max-line-length = 120
max-module-lines = 2000

[tool.codespell]
skip = "*.po,*.ts"
count = ""
quiet-level = 3

[tool.pytest.ini_options]
addopts = "-v -ra -s"
pythonpath = ["./myWhoosh2Garmin.py"]
testpaths = ["./tests"]
markers = [
    "debug: debugging tests"
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    "if DEBUG_MODE",

    # Don't complain if tests don't hit defensive assertion code:
#    "raise AssertionError",
#    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
fail_under = 60
ignore_errors = true

[tool.coverage.paths]
source = ["./myWhoosh2Garmin.py"]

[tool.coverage.html]
directory = "reports"

[tool.coverage.run]
branch = true
parallel = true
omit = ["myWhoosh2Garmin/__init__.py"]

[tool.isort]
profile = "black"
known_third_party = [
    "numpy", "pandas", "keras", "tensorflow", "sklearn",
    "matplotlib", "scipy", "gnspy"
]
